Fix for negative values clipping in DRO

--- a/src/app/widgets/Location/components/MachinePositionInput.styl
+++ b/src/app/widgets/Location/components/MachinePositionInput.styl
@@ -28,10 +28,10 @@
   color: #3e85c7;
   font-weight: bold;
   background: none;
-  font-size: 1.75rem;
+  font-size: 1.6rem;
   font-family: $font-family-monospace;
   width: 100%;
-  margin: 0 5px;
+  margin: 0 4px;
   border: solid 1px #e5e7eb;
 }
 
