--- a/src/app/widgets/Location/index.styl
+++ b/src/app/widgets/Location/index.styl
@@ -287,9 +287,8 @@
     }
 
     &:hover {
-        color: #3e85c7;
         border-color: #3e85c7;
-        background: #e5e7eb;
+        background: #77a9d7;
     }
 
     &:disabled {
